--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -263,14 +263,14 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/tvSignIn"
+                android:id="@+id/tvSignup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="24dp"
-                android:text="Already have an account? Sign in here"
+                android:text="Create an account"
                 android:textColor="#008080"
-                android:textSize="14sp" />
+                android:textSize="18sp" />
 
         </LinearLayout>
     </ScrollView>
