--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,27 +3,26 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/home"
+        android:id="@+id/homeFragment"
         android:title="Home"
         android:icon="@drawable/homeicon"
         />
       <item
-        android:id="@+id/reports"
+        android:id="@+id/reportFragment"
         android:title="Report"
         android:icon="@drawable/booking"
         />
       <item
-        android:id="@+id/addinvoice"
-          android:enabled="false"
+        android:id="@+id/invoiceFragment"
         android:title=""
         />
       <item
-        android:id="@+id/items"
+        android:id="@+id/itemsFragment"
         android:title="Items"
         android:icon="@drawable/items"
         />
       <item
-        android:id="@+id/setting"
+        android:id="@+id/settingFragment"
         android:title="Setting"
         android:icon="@drawable/settings"
         />
