--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -42,8 +42,8 @@
                     android:layout_marginTop="60dp"
                     android:layout_marginBottom="4dp"
                     android:text="Reset Password"
-                    android:textColor="#1B1F3B"
-                    android:textSize="24sp"
+                    android:textColor="@color/imp_text_color"
+                    android:textSize="28sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -77,10 +77,10 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="@drawable/rounded_box"
+                        android:background="@drawable/rounded_box_outline_edt"
                         android:hint="Enter new password"
                         android:inputType="textPassword"
-                        android:padding="17dp"
+                        android:padding="14dp"
                         android:textColorHint="#A0A4A8" />
 
                 </LinearLayout>
@@ -107,10 +107,10 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="@drawable/rounded_box"
+                        android:background="@drawable/rounded_box_outline_edt"
                         android:hint="Re-enter new password"
                         android:inputType="textPassword"
-                        android:padding="17dp"
+                        android:padding="14dp"
                         android:textColorHint="#A0A4A8" />
 
                 </LinearLayout>
@@ -124,7 +124,7 @@
                     android:backgroundTint="@color/buttoncolor"
                     android:elevation="4dp"
                     android:letterSpacing="0.1"
-                    android:padding="12dp"
+                    android:padding="15dp"
                     android:text="Reset Password"
                     android:textColor="#FFFFFF"
                     android:textStyle="bold"
@@ -135,18 +135,5 @@
 
         </ScrollView>
 
-        <TextView
-            android:id="@+id/tvCreateAccount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:textSize="18sp"
-            android:layout_marginBottom="16dp"
-            android:text="Create an account"
-            android:textColor="#0288D1"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
