--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <gradient
-        android:startColor="#809DDA"
-        android:endColor="#91CED4"
-        android:angle="45" />
+    <solid android:color="#DCEDEF" />
     <corners android:radius="8dp" />
 </shape>
