--- a/app/src/main/res/drawable/rounded_box_outline_edt.xml
+++ b/app/src/main/res/drawable/rounded_box_outline_edt.xml
@@ -3,8 +3,6 @@
     <solid android:color="#FFFFFF" />
     <stroke android:width="1dp" android:color="#D9D9D9" />
     <corners
-        android:bottomLeftRadius="8dp"
-        android:bottomRightRadius="8dp"
-
+        android:radius="8dp"
         />
 </shape>
