--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="vertical"
-            android:padding="25dp"
+            android:padding="35dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -48,8 +48,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:text="Forgot Password?"
-                android:layout_marginTop="50dp"
-                android:textColor="#1B1F3B"
+                android:fontFamily="sans-serif-medium"
+                android:layout_marginTop="40dp"
+                android:textColor="@color/imp_text_color"
                 android:textSize="28sp"
                 android:textStyle="bold" />
 
@@ -58,10 +59,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 android:text="Enter your email address to get the password reset link."
                 android:layout_marginTop="4dp"
-                android:textColor="@color/light_text_colorr" />
+                android:textColor="@color/primery_input_text" />
 
             <!-- Email Address Field -->
             <TextView
@@ -72,25 +73,28 @@
                 android:textSize="18sp"
                 android:layout_marginTop="30dp"
                 android:text="Email Address"
-                android:textColor="#1B1F3B" />
+                android:textColor="@color/primery_input_text" />
 
             <EditText
                 android:id="@+id/etEmailAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
-                android:background="@drawable/rounded_box_outline"
+                android:background="@drawable/rounded_box_outline_edt"
                 android:hint="hello@example.com"
+                android:textColor="@color/primery_input_text"
+                android:fontFamily="sans-serif-medium"
                 android:inputType="textEmailAddress"
-                android:padding="17dp"
-                android:textColorHint="#A0A4A8" />
+                android:padding="15dp"
+                android:textSize="14sp"
+                android:textColorHint="@color/scendory_input_text" />
 
             <!-- Password Reset Button -->
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnPasswordReset"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="0dp"
                 android:backgroundTint="@color/buttoncolor"
                 android:elevation="4dp"
                 android:letterSpacing="0.1"
@@ -102,20 +106,6 @@
 
 
         </LinearLayout>
-        <!-- Create an Account Link -->
-        <TextView
-            android:id="@+id/tvCreateAccount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="16dp"
-            android:text="Create an account"
-            android:textColor="#0288D1"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
