--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,6 @@
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="16dp"
             app:defaultNavHost="true"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,20 +54,20 @@
             <com.google.android.material.bottomappbar.BottomAppBar
                 android:id="@+id/bottomappbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="?actionBarSize"
                 android:layout_gravity="bottom"
                 app:backgroundTint="@color/buttoncolor"
                 app:fabAlignmentMode="center"
                 app:fabCradleMargin="8dp"
                 app:fabCradleVerticalOffset="12dp"
-                app:fabCradleRoundedCornerRadius="28dp"
+                app:fabCradleRoundedCornerRadius="280dp"
                 app:hideOnScroll="false">
 
                 <!-- Bottom Navigation Menu inside BottomAppBar -->
                 <com.google.android.material.bottomnavigation.BottomNavigationView
                     android:id="@+id/bottomnavigation"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="?actionBarSize"
                     android:background="@android:color/transparent"
                     app:menu="@menu/menu"
                     app:itemRippleColor="@null"
@@ -77,17 +76,14 @@
                     android:elevation="0dp" />
             </com.google.android.material.bottomappbar.BottomAppBar>
 
-            <!-- Center FloatingActionButton -->
-            <!-- Center FloatingActionButton with white border -->
+
             <FrameLayout
                 android:layout_width="64dp"
                 android:layout_height="65dp"
                 android:layout_gravity="center|bottom"
                 android:background="@drawable/fab_background"
                 android:layout_marginBottom="37dp"
-                android:elevation="0dp"><!-- Optional: to make the border more visible -->
-
-                <!-- Inner FloatingActionButton -->
+                android:elevation="0dp">
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/floatingActionButton"
                     android:layout_width="60dp"
@@ -99,7 +95,6 @@
                     app:shapeAppearanceOverlay="@style/FABShape"
                     app:tint="#F7F8FA"
                     android:scaleType="fitCenter"
-
                     />
 
             </FrameLayout>
