--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -33,8 +33,9 @@
                 android:layout_marginTop="32dp"
                 android:fontFamily="sans-serif-medium"
                 android:text="Create an Account"
-                android:textColor="#2B2F3E"
-                android:textSize="24sp" />
+                android:textColor="@color/imp_text_color"
+                android:textStyle="bold"
+                android:textSize="28sp" />
 
             <!-- Name Label -->
             <TextView
@@ -46,8 +47,8 @@
                 android:layout_marginEnd="24dp"
                 android:fontFamily="sans-serif-medium"
                 android:text="Name"
-                android:textColor="#2B2F3E"
-                android:textSize="14sp" />
+                android:textColor="@color/primery_input_text"
+                android:textSize="16sp" />
 
             <!-- Name EditText -->
             <EditText
@@ -57,8 +58,9 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="24dp"
-                android:background="@drawable/rounded_box_outline"
-                android:hint="Muhammad Mohsin"
+                android:textColor="@color/black"
+                android:background="@drawable/rounded_box_outline_edt"
+                android:hint="User Name"
                 android:padding="12dp" />
 
             <!-- Email Label -->
@@ -71,18 +73,19 @@
                 android:layout_marginEnd="24dp"
                 android:fontFamily="sans-serif-medium"
                 android:text="Email Address"
-                android:textColor="#2B2F3E"
-                android:textSize="14sp" />
+                android:textColor="@color/primery_input_text"
+                android:textSize="16sp" />
 
             <!-- Email EditText -->
             <EditText
                 android:id="@+id/etEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="24dp"
-                android:background="@drawable/rounded_box_outline"
+                android:background="@drawable/rounded_box_outline_edt"
                 android:hint="hello@example.com"
                 android:padding="12dp" />
 
@@ -96,8 +99,8 @@
                 android:layout_marginEnd="24dp"
                 android:fontFamily="sans-serif-medium"
                 android:text="Password"
-                android:textColor="#2B2F3E"
-                android:textSize="14sp" />
+                android:textColor="@color/primery_input_text"
+                android:textSize="16sp" />
 
             <!-- Password EditText -->
             <EditText
@@ -107,7 +110,8 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="24dp"
-                android:background="@drawable/rounded_box_outline"
+                android:textColor="@color/black"
+                android:background="@drawable/rounded_box_outline_edt"
                 android:hint="••••••••••"
                 android:inputType="textPassword"
                 android:padding="12dp" />
@@ -134,7 +138,7 @@
                 android:elevation="4dp"
                 android:letterSpacing="0.1"
                 android:padding="12dp"
-                android:text="Sign up"
+                android:text="SIGN UP"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
                 app:cornerRadius="8dp" />
@@ -168,7 +172,7 @@
                     android:drawableStart="@drawable/google"
                     android:text="Continue with Google"
                     android:drawablePadding="-42dp"
-                    android:textColor="@color/light_text_colorr"
+                    android:textColor="@color/primery_input_text"
                     app:cornerRadius="8dp"
                     />
 
@@ -180,6 +184,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="24dp"
+                android:fontFamily="sans-serif-medium"
                 android:text="Already have an account? Sign in here"
                 android:textColor="#008080"
                 android:textSize="14sp" />
