--- a/app/src/main/res/layout/appbar.xml
+++ b/app/src/main/res/layout/appbar.xml
@@ -9,8 +9,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="@drawable/gradient_background_appbar">
+        android:layout_height="?actionBarSize"
+        android:background="@color/buttoncolor">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,8 +18,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             app:layout_constraintStart_toStartOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -67,7 +67,7 @@
                     app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
                     app:layout_constraintStart_toEndOf="@+id/tvTitle"
                     app:layout_constraintTop_toTopOf="@+id/tvTitle"
-                    app:srcCompat="@drawable/refresh" />
+                    app:srcCompat="@drawable/sync" />
 
                 <ImageView
                     android:id="@+id/imageView6"
@@ -95,28 +95,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-        <EditText
-            android:id="@+id/editTextText"
-            android:layout_width="310dp"
-            android:layout_height="40dp"
-            android:layout_marginBottom="24dp"
-            android:background="@drawable/rounded_box_outline"
-            android:drawableStart="@drawable/search"
-            android:textColor="@color/buttoncolor"
-            android:drawablePadding="10dp"
-            android:drawableTint="@color/buttoncolor"
-            android:ems="10"
-            android:hint="Search"
-            android:inputType="text"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:textColorHint="@color/buttoncolor"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-            tools:ignore="NotSibling" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
