--- a/app/src/main/res/layout/fragment_items.xml
+++ b/app/src/main/res/layout/fragment_items.xml
@@ -13,44 +13,142 @@
         android:layout_height="match_parent"
         tools:context=".ItemsFragment">
 
-
-
-        <ImageView
-            android:id="@+id/imgemptybox"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_gravity="center"
+            android:background="@drawable/rounded_box_outline"
+            android:backgroundTint="@color/buttoncolor"
+            android:elevation="4dp"
+            android:orientation="horizontal"
+            android:padding="2dp"
+            android:radius="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="100dp"
-            app:srcCompat="@drawable/empty_box" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/noitem"
-            android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:layout_width="300dp"
+                android:layout_height="38dp"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/bg_icon"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/searchInput"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg_icon"
+                    android:drawableStart="@drawable/search"
+                    android:drawablePadding="3dp"
+                    android:hint="Search for an item"
+                    android:padding="10dp"
+                    android:textColor="@color/primery_input_text"
+                    android:textColorHint="#D8D8D8"
+                    android:textSize="14sp" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp"
+
+                    android:background="#777777" />
+
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="5dp"
+                    android:src="@drawable/filter_icon" />
+            </LinearLayout>
+
+
+            <ImageView
+                android:id="@+id/scanIcon"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/bg_icon"
+                android:padding="6dp"
+                android:src="@drawable/barcodescanner"
+
+                />
+
+            <!-- Settings/More Icon -->
+            <ImageView
+                android:id="@+id/optionsIcon"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:background="@drawable/bg_icon"
+                android:contentDescription="More Options"
+                android:padding="8dp"
+                android:src="@drawable/more" />
+        </LinearLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/tx_no_item_show"
+            android:visibility="gone"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:text="No item avaliable"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="@+id/imgemptybox"
-            app:layout_constraintStart_toStartOf="@+id/imgemptybox"
-            android:textStyle="bold"
-            android:textColor="#1A2E5E"
-            app:layout_constraintTop_toBottomOf="@+id/imgemptybox" />
+            app:layout_constraintBottom_toTopOf="@+id/addnew"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="Tab “add new item” to add items"
-            app:layout_constraintEnd_toEndOf="@+id/noitem"
-            app:layout_constraintStart_toStartOf="@+id/noitem"
-            app:layout_constraintTop_toBottomOf="@+id/noitem"
-            android:textColor="#777777"
 
-            />
+            <ImageView
+                android:id="@+id/imgemptybox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="100dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/empty_box" />
+
+            <TextView
+                android:id="@+id/noitem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:text="No item avaliable"
+                android:textColor="#1A2E5E"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/imgemptybox"
+                app:layout_constraintStart_toStartOf="@+id/imgemptybox"
+                app:layout_constraintTop_toBottomOf="@+id/imgemptybox" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Tab “add new item” to add items"
+                android:textColor="#777777"
+                app:layout_constraintEnd_toEndOf="@+id/noitem"
+                app:layout_constraintStart_toStartOf="@+id/noitem"
+                app:layout_constraintTop_toBottomOf="@+id/noitem"
+
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/addnew"
