--- a/app/src/main/res/layout/recent_invoice_layout.xml
+++ b/app/src/main/res/layout/recent_invoice_layout.xml
@@ -2,26 +2,23 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    android:layout_marginBottom="20dp"
+    android:layout_marginBottom="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="80dp"
         android:background="@drawable/rounded_box_outline"
-        android:padding="10dp"
+        android:padding="11dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
         app:layout_constraintEnd_toEndOf="parent"
         android:orientation="vertical"
         >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="2dp"
+            android:layout_height="30dp"
             android:orientation="horizontal"
             android:background="@color/white">
 
@@ -51,8 +48,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="2dp"
+            android:layout_height="30dp"
             android:orientation="horizontal"
             android:background="@color/white">
 
@@ -88,10 +84,9 @@
                 />
             <ImageView
                 android:id="@+id/img_more"
-
                 android:layout_marginStart="2dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="25dp"
+                android:layout_height="20dp"
                 android:src="@drawable/more"
                 />
         </LinearLayout>
