--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,12 @@
     <color name="buttoncolor">#008891</color>
     <color name="backgroundcolor">#E4E7EB</color>
     <color name="btn_google_bg_color">#E4E7EB</color>
-    <color name="light_text_colorr">#4B5768</color>
+    <color name="imp_text_color">#1A2E5E</color>
+    <color name="primery_input_text">#2D3E50</color>
+    <color name="scendory_input_text">#777777</color>
+
+
+
+
+
 </resources>
