--- a/app/src/main/res/layout/activity_sale.xml
+++ b/app/src/main/res/layout/activity_sale.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sale Activity"
+        android:text="Invoice Activity"
         android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:textStyle="bold"
