--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -152,7 +152,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/inventory_logo2" />
+                    android:src="@drawable/client_icon" />
 
                 <TextView
                     android:layout_width="wrap_content"
